# team_sign_off

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: applications.py  audit.py  auth.py  users.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
frontend/: .env.sample  Dockerfile  env.d.ts  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: applications.ts  audit.ts  auth.ts  client.ts
frontend/src/components/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
frontend/src/views/: ApplicationDetail.vue  AuditPage.vue  Callback.vue  CreateApplication.vue  Dashboard.vue  MyApplications.vue  PendingApprovals.vue
